--- a/backend/.env
+++ b/backend/.env
@@ -12,7 +12,7 @@ STRIPE_WEBHOOK_SECRET=whsec_02cf785b76785b5497647d80886dd04f160aa7fbcbc6a290eb9d
  #Admin Configuration
 ADMIN_API_KEY=admin_api_key_secure_123456
 
-# Frontend URL (for CORS)
+# Frontend URL - CORRIGÉ pour pointer vers le bon port
 FRONTEND_URL=http://localhost:8080
 
 # Session Storage (file-based for persistence across restarts, can be 'memory' or 'file')
