--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=http://localhost:3001
+VITE_API_BASE_URL=http://localhost:3001/api
 VITE_STRIPE_PAYMENT_LINK=https://buy.stripe.com/test_8x2dRbgfsale3a93ru2wU02
