--- a/backend/package.json
+++ b/backend/package.json
@@ -6,30 +6,40 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "npm run db:migrate && ts-node-dev --respawn --transpile-only src/index.ts",
     "lint": "eslint . --ext .ts",
-    "test": "jest"
+    "test": "jest",
+    "db:migrate": "knex migrate:latest --knexfile src/config/knexfile.ts",
+    "db:rollback": "knex migrate:rollback --knexfile src/config/knexfile.ts"
   },
   "dependencies": {
     "apify-client": "^2.8.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "knex": "^3.1.0",
     "morgan": "^1.10.0",
     "nanoid": "^3.3.6",
+    "pg": "^8.16.3",
+    "sqlite3": "^5.1.7",
     "stripe": "^14.5.0",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.23",
     "@types/helmet": "^0.0.48",
     "@types/jest": "^29.5.10",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^20.19.0",
+    "@types/pg": "^8.15.4",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
