--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint . --ext .ts",
     "test": "jest",
     "db:migrate": "knex migrate:latest --knexfile src/config/knexfile.ts",
-    "db:rollback": "knex migrate:rollback --knexfile src/config/knexfile.ts"
+    "db:rollback": "knex migrate:rollback --knexfile src/config/knexfile.ts",
+    "dev:prod": "cross-env NODE_ENV=production npm run db:migrate && cross-env NODE_ENV=production ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "dependencies": {
     "apify-client": "^2.8.1",
@@ -25,6 +26,7 @@
     "morgan": "^1.10.0",
     "nanoid": "^3.3.6",
     "pg": "^8.16.3",
+    "pg-connection-string": "^2.6.2",
     "sqlite3": "^5.1.7",
     "stripe": "^14.5.0",
     "winston": "^3.11.0",
@@ -43,6 +45,7 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.54.0",
     "express-validator": "^7.2.1",
     "jest": "^29.7.0",
