--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "morgan": "^1.10.0",
+    "mvola-merchant-pay": "file:mvola-sdk",
     "nanoid": "^3.3.6",
     "pg": "^8.16.3",
     "pg-connection-string": "^2.6.2",
