Update front design

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -57,3 +57,14 @@ SMTP_FROM_NAME=EasyScrapy
 # SMTP_REPLY_TO=support@easyscrapy.com
 # If your provider uses self-signed certs, you can disable TLS verification by setting this to false
 # SMTP_TLS_REJECT_UNAUTHORIZED=true
+
+# --- Alerting (Slack / Email) ---
+# Enable alert notifications for critical audit events
+ALERTS_ENABLED=false
+# Slack Incoming Webhook URL (optional)
+SLACK_WEBHOOK_URL=
+# Email recipient for alerts (optional)
+ALERT_EMAIL_TO=
+# Comma-separated list of audit event names to alert on
+# Defaults include: stripe.webhook_verification_failed, security.rate_limited, export.denied_not_owner
+ALERT_EVENTS=stripe.webhook_verification_failed,security.rate_limited,export.denied_not_owner
